Prevent single stat numbers from being clipped by cell titles (#13772)

--- a/ui/src/shared/components/SingleStat.scss
+++ b/ui/src/shared/components/SingleStat.scss
@@ -20,8 +20,14 @@
 .single-stat--resizer {
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 32px);
+  margin-top: 32px;
 }
+
+.dygraph-child .single-stat--resizer {
+    height: 100%;
+    margin-top: 0;
+  }
 
 .single-stat--text {
   font-family: $ix-text-font;
